// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Query: WHERE + GROUP BY + HAVING combined > produces all clauses in correct order 1`] = `
"SET 'pipeline.name' = 'combined-clauses-pipeline';

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`filtered_agg\` WITH (
  'connector' = 'kafka',
  'topic' = 'filtered-agg',
  'format' = 'json'
);

INSERT INTO \`filtered_agg\`
SELECT user_id AS \`user_id\`, SUM(amount) AS \`total\` FROM \`orders\`
WHERE amount > 0
GROUP BY \`user_id\`
HAVING SUM(amount) > 500;
"
`;

exports[`Query: aggregation with HAVING > produces correct SQL 1`] = `
"SET 'pipeline.name' = 'agg-having-pipeline';

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`high_spenders\` WITH (
  'connector' = 'kafka',
  'topic' = 'high-spenders',
  'format' = 'json'
);

INSERT INTO \`high_spenders\`
SELECT user_id AS \`user_id\`, SUM(amount) AS \`total\` FROM \`orders\`
GROUP BY \`user_id\`
HAVING SUM(amount) > 1000;
"
`;

exports[`Query: chained with upstream Filter > wraps the upstream filter in a subquery 1`] = `
"SET 'pipeline.name' = 'filter-query-pipeline';

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`user_totals\` WITH (
  'connector' = 'kafka',
  'topic' = 'user-totals',
  'format' = 'json'
);

INSERT INTO \`user_totals\`
SELECT user_id AS \`user_id\`, SUM(amount) AS \`total\` FROM (
SELECT * FROM \`orders\` WHERE user_id <> 'bot'
)
GROUP BY \`user_id\`;
"
`;

exports[`Query: multiple window functions sharing a named window > produces correct SQL with shared WINDOW clause 1`] = `
"SET 'pipeline.name' = 'multi-window-pipeline';

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`multi_window_output\` WITH (
  'connector' = 'kafka',
  'topic' = 'multi-window-output',
  'format' = 'json'
);

INSERT INTO \`multi_window_output\`
SELECT user_id AS \`user_id\`, amount AS \`amount\`, LAG(amount, 1) OVER \`w\` AS \`prev_amount\`, LEAD(amount, 1) OVER \`w\` AS \`next_amount\`, ROW_NUMBER() OVER \`w\` AS \`row_num\` FROM \`orders\`
WINDOW \`w\` AS (PARTITION BY \`user_id\` ORDER BY \`event_time\` ASC);
"
`;

exports[`Query: window function with inline OVER > produces correct SQL for RANK with inline window spec 1`] = `
"SET 'pipeline.name' = 'inline-over-pipeline';

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`ranked_orders\` WITH (
  'connector' = 'kafka',
  'topic' = 'ranked-orders',
  'format' = 'json'
);

INSERT INTO \`ranked_orders\`
SELECT user_id AS \`user_id\`, amount AS \`amount\`, RANK() OVER (PARTITION BY \`user_id\` ORDER BY \`amount\` DESC) AS \`rank_num\` FROM \`orders\`;
"
`;

exports[`Query: window function with named window > produces correct SQL for LAG and ROW_NUMBER with named window 1`] = `
"SET 'pipeline.name' = 'named-window-pipeline';

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

CREATE TABLE \`windowed_orders\` WITH (
  'connector' = 'kafka',
  'topic' = 'windowed-orders',
  'format' = 'json'
);

INSERT INTO \`windowed_orders\`
SELECT user_id AS \`user_id\`, amount AS \`amount\`, LAG(amount, 1) OVER \`w\` AS \`prev_amount\`, ROW_NUMBER() OVER \`w\` AS \`row_num\` FROM \`orders\`
WINDOW \`w\` AS (PARTITION BY \`user_id\` ORDER BY \`event_time\` ASC);
"
`;
